tests/compile-fail/misc_unit_assignments.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/misc_unit_assignments.rs:7:18
  |
7 |     let _c = a + b;
  |                  ^ expected `Quantity<_, ..., ...>`, found `Quantity<f64, ..., ...>`
  |
  = note: expected struct `Quantity<_, SiDim<typenum::int::Z0, typenum::int::Z0, typenum::int::NInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>, typenum::int::Z0, typenum::int::Z0, typenum::int::Z0, typenum::int::Z0>, AngleKind>`
             found struct `Quantity<f64, SiDim<typenum::int::Z0, typenum::int::Z0, typenum::int::NInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>, typenum::int::Z0, typenum::int::Z0, typenum::int::Z0, typenum::int::Z0>, ()>`
